--- a/zillow-data-exploration.ipynb
+++ b/zillow-data-exploration.ipynb
@@ -57,7 +57,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<i>Raw data (uploaded to github) is assigned to a variable psqftZRI (for per square foot ZRI - no, I did not just mash some keys on my keyboard), so it can be called up easily later.</i>"
+      "<i>Raw data (uploaded to github) is assigned to a variable psqftZRI (for per square foot ZRI - no, I did not just mash some keys on my keyboard), so it can be easily called up later.</i>"
      ]
     },
     {
