--- a/zillow-data-exploration.ipynb
+++ b/zillow-data-exploration.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d2b6babf6b4fe4e5f65f386bdae27e4bc570e0144e0d9e48ef932e5a5c5725e0"
+  "signature": "sha256:ee46cb985feec188fa30e706c5cb3afba6cf630fe30a05c526f5818c67480b23"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1043,6 +1043,23 @@
       "        \n",
       "\n",
       "<sup>1</sup><small>[The Big Mac Index](http://www.economist.com/content/big-mac-index)</small>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "---"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<right><sup><b>Sources</b>:  \n",
+      "[Zillow Real Estate Research](http://www.zillow.com/research/data/)  \n",
+      "[Bureau of Labor Statistics](http://data.bls.gov/timeseries/LASST340000000000003?data_tool=XGtable)\n",
+      "</sup>\n"
      ]
     }
    ],
