--- a/zri-data-exploration.ipynb
+++ b/zri-data-exploration.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ee46cb985feec188fa30e706c5cb3afba6cf630fe30a05c526f5818c67480b23"
+  "signature": "sha256:584350a6132ed5375740ff72651c70c294e5fd5038c03361c96f81bc6ee59536"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -969,7 +969,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<b>Here we see the declining trend in New Jersey's Unemployment Rate</b><sup>1</sup>, frome 2012-07 to 2013-04 when unemployment declined by 0.1% each month.  A preliminary hypothesis is that although it is illegal is some (to my knowledge, if not all) places to deny tenants who are unemployed, <b>I expect there to be at least minimal correlation between levels in renting and unemployment rate</b>.  Consequently, as demand for rentals may increase as unemployment decreases, it can be expected to find a slightly upward trend in median rent prices between 2012-07 and 2013-04.\n",
+      "<b>Here we see the declining trend in New Jersey's Unemployment Rate</b><sup>1</sup>, from 2012-07 to 2013-04 when unemployment declined by 0.1% each month.  A preliminary hypothesis is that although it is illegal is some (to my knowledge, if not all) places to deny tenants who are unemployed, <b>I expect there to be at least minimal correlation between levels in renting and unemployment rate</b>.  Consequently, as demand for rentals may increase as unemployment decreases, it can be expected to find a slightly upward trend in median rent prices between 2012-07 and 2013-04.\n",
       "\n",
       "Let's find out.\n",
       "\n",
