--- a/zri-exploration-I.ipynb
+++ b/zri-exploration-I.ipynb
@@ -19,7 +19,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In this project, we'll be using Zillow's public research data to create data frames and visualize real estate data.  In this particular case, we'll be looking at **Zillow's Median ZRI (Zillow Rent Index) data** to compare rental property values in $/sqft throughout different areas in the state of New Jersey."
+      "This side-project utilizes Zillow's public research data to create data frames and visualize real estate data.  In this particular case, we'll be looking at **Zillow's Median ZRI (Zillow Rent Index) data** to compare rental property values in $/sqft throughout different areas in the state of New Jersey."
      ]
     },
     {
